Readme update | quick javaDoc completion